# TitaniumChess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/icons/: TitaniumChess.icns
assets/shaders/: fragmentShader.frag
include/glad/: glad.h
resources/macOS/: Info.plist
src/: glad.c  main.cpp
src/entities/: EBO.h  VAO.cpp  VAO.h  VBO.h
src/entities/camera/: Camera.h
src/entities/rendering/: EBO.cpp  EBO.h  VAO.h  VBO.cpp  VBO.h
src/entities/texture/: Texture.cpp  Texture.h
src/input/: InputManager.cpp  InputManager.h
src/renderer/: Core.cpp  Core.h  WindowManager.cpp  WindowManager.h
src/settings/: SettingsManager.cpp  SettingsManager.h
src/shaders/: shaders.cpp  shaders.h
src/utilities/: CommonIncludes.h  fps_utils.cpp  fps_utils.h
